plugins {
  id 'java'
}

group = 'org.scratchgame'
version = '1.0-SNAPSHOT'

java {
  sourceCompatibility = '21'
}

repositories {
  mavenCentral()
}

dependencies {
  implementation "com.fasterxml.jackson.core:jackson-databind:$jackson"
}

test {

}